Inlined some functions in the library

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,3 +1,8 @@
+# Make makefile silent, you can do `VERBOSE=1 make whatever` to get messages
+ifndef VERBOSE
+.SILENT:
+endif
+
 CFLAGS = -Wall -g -O2 -mtune=cortex-a8 -march=armv7-a -I../library/include
 LDFLAGS = -L../library/lib -lbbb_pruio
 
@@ -19,5 +24,5 @@ run:
 
 .PHONY:clean
 clean:
-	-rm example.o
-	-rm example 
+	-rm example.o 2> /dev/null
+	-rm example 2> /dev/null
