--- a/device-tree-overlay/PRUIO-DTO.dts
+++ b/device-tree-overlay/PRUIO-DTO.dts
@@ -6,30 +6,36 @@
    part-number = "PRUIO-DTO";
    version = "00A0";
 
-   fragment@0 {
-      target = <&am33xx_pinmux>;
-      __overlay__ {
-         pinctrl_pruio: pinmux_pinctrl_pruio{
-            pinctrl-single,pins = < 
+   /*fragment@0 {*/
+   /*   target = <&am33xx_pinmux>;*/
+   /*   __overlay__ {*/
+   /*      pinctrl_pruio: pinmux_pinctrl_pruio{*/
+   /*         pinctrl-single,pins = < */
                /* PINMUX IS DONE AT RUNTIME, BE CAREFUL! */
-            >;
-         };
-      };
-   };
 
-   fragment@1 {
-      target = <&ocp>;
-      __overlay__ {
-         test_helper: helper {
-            compatible = "bone-pinmux-helper";
-            pinctrl-names = "default";
-            pinctrl-0 = <&pinctrl_pruio>;
-            status = "okay";
-         };
-      };
-   };
+               /* P9_11 input pullup */ 
+               /* 0x070 0x37  */
 
-   fragment@2{
+               /* P9_12 input pullup */ 
+               /* 0x078 0x37 */
+   /*         >;*/
+   /*      };*/
+   /*   };*/
+   /*};*/
+
+   /*fragment@1 {*/
+   /*   target = <&ocp>;*/
+   /*   __overlay__ {*/
+   /*      test_helper: helper {*/
+   /*         compatible = "bone-pinmux-helper";*/
+   /*         pinctrl-names = "default";*/
+   /*         pinctrl-0 = <&pinctrl_pruio>;*/
+   /*         status = "okay";*/
+   /*      };*/
+   /*   };*/
+   /*};*/
+
+   fragment@0{
       target = <&pruss>;
       __overlay__ {
          status = "okay";
