--- a/puredata-external/Makefile
+++ b/puredata-external/Makefile
@@ -20,7 +20,7 @@ MANUAL =
 # list them here.  This can be anything from header files, test patches,
 # documentation, etc.  README.txt and LICENSE.txt are required and therefore
 # automatically included
-EXTRA_DIST = beaglebone.c beaglebone.h
+EXTRA_DIST = beaglebone.c beaglebone.h test.pd
 
 #------------------------------------------------------------------------------#
 #
